Fix whitespace and css structure

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * { margin: 0; }
+
 html, body {
   height: 100%;
   weight: 100%;
@@ -14,7 +15,12 @@ main { position: relative; }
   transform: translateY(35%);
   display: block;
 }
-h1 { text-decoration: underline; font-size: 2.5em; line-height: 1.9em;}
+
+h1 {
+  text-decoration: underline;
+  font-size: 2.5em;
+  line-height: 1.9em;
+}
 
 .title p { margin-bottom: 10px; }
 
@@ -66,13 +72,11 @@ li {
 
 .text {
   position: absolute;
-
   padding: 5px;
   display: block;
   top: 50%;
-
   transform: translateY(-50%;)
 }
 
 .quote-author { font-style: italic; }
-.quote-author::before { content: "- ";}
+.quote-author::before { content: "- "; }
